# wallpaper_carousel

./: .gitattributes  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.cargo/: rust-toolchain.toml
.github/workflows/: errors.yml  warnings.yml
.readme_assets/: description.md  other.md  warning.md
examples/: config.nix
src/: config.rs  lib.rs  main.rs
src_typ/: vision.typ
