cargo-features = ["codegen-backend"]
[package]
name = "wallpaper_carousel"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
clap = { version = "^4", features = ["derive"] }
color-eyre = "^0.6.3"
config = "^0.14"
derive-new = "^0"
fontdb = "^0.22"
image = "^0.25"
rand = "^0.8"
resvg = "^0.44"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tiny-skia = "^0.11"
usvg = "^0.44"
v_utils = "^2"
xdg = "^3"

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"
