cargo-features = ["codegen-backend"]
[package]
name = "wallpaper_carousel"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
clap = { version = "^4", features = ["derive"] }
color-eyre = "^0.6.5"
config = "^0.15"
derive-new = "^0"
fontdb = "^0.23"
image = "^0.25"
libc = "^0.2"
rand = "^0.9"
resvg = "^0.45"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tiny-skia = "^0.11"
tracing = "^0.1"
usvg = "^0.45"
v_utils = { version = "^2.9.4", features = ["tracing"] }
xdg = "^3"

[patch.crates-io]
v_utils = { path = "/home/v/s/v_utils/v_utils" }

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"
